--- a/crates/languages/Cargo.toml
+++ b/crates/languages/Cargo.toml
@@ -17,6 +17,7 @@ load-grammars = [
     "tree-sitter-bash",
     "tree-sitter-c",
     "tree-sitter-cpp",
+    "tree-sitter-c-sharp",
     "tree-sitter-css",
     "tree-sitter-diff",
     "tree-sitter-gitcommit",
@@ -79,6 +80,7 @@ tree-sitter = { workspace = true, optional = true }
 tree-sitter-bash = { workspace = true, optional = true }
 tree-sitter-c = { workspace = true, optional = true }
 tree-sitter-cpp = { workspace = true, optional = true }
+tree-sitter-c-sharp = { workspace = true, optional = true }
 tree-sitter-css = { workspace = true, optional = true }
 tree-sitter-diff = { workspace = true, optional = true }
 tree-sitter-gitcommit = { workspace = true, optional = true }
@@ -103,6 +105,7 @@ theme = { workspace = true, features = ["test-support"] }
 tree-sitter-bash.workspace = true
 tree-sitter-c.workspace = true
 tree-sitter-cpp.workspace = true
+tree-sitter-c-sharp.workspace = true
 tree-sitter-css.workspace = true
 tree-sitter-go.workspace = true
 tree-sitter-python.workspace = true
