--- a/crates/languages/src/razor/config.toml
+++ b/crates/languages/src/razor/config.toml
@@ -11,4 +11,5 @@ brackets = [
     { start = "\"", end = "\"", close = true, newline = false, not_in = ["string"] },
     { start = "'", end = "'", close = true, newline = false, not_in = ["string", "comment"] },
     { start = "@*", end = "*@", close = true, newline = false, not_in = ["string", "comment"] },
+    { start = "<!--", end = "-->", close = true, newline = false, not_in = ["string", "comment"] },
 ]
